--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,8 +1,47 @@
 .footer {
-  position: fixed;
-  bottom: 0;
-  height: 65px;
-  width: 100%;
-  background-color: #282828;
-  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+.footer__left {
+  flex: 0.3;
+  display: flex;
+  align-items: center;
+  color: white;
+  width: 300px;
+}
+.footer__albumLogo {
+  width: 60px;
+  margin-right: 20px;
+  object-fit: contain;
+}
+.footer__songInfo > h4 {
+  margin-bottom: 5px;
+}
+.footer__songInfo > p {
+  font-size: 12px;
+}
+.footer__center {
+  color: white;
+  padding: 0 100px;
+  flex: 0.4;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 450px;
+}
+.footer__right {
+  color: white;
+  flex: 0.3;
+}
+.footer__green {
+  color: #1ed15d;
+}
+.footer__icon:hover,
+.footer__green:hover {
+  transition: transform 0.2s ease-in-out;
+  transform: scale(1.2) !important;
+}
+.footer__right * .MuiSlider-root {
+  color: green;
 }
