--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -7,6 +7,17 @@
   min-width: 230px;
   background-color: #040404;
 }
+
+.sidebar > hr {
+  border: 1px solid #282828;
+  width: 90%;
+  margin: 10px auto;
+}
 .sidebar__logo {
   width: 80%;
+}
+.sidebar__title {
+  margin-left: 10px;
+  padding: 5px;
+  font-size: 15px;
 }
