--- a/src/components/Body.css
+++ b/src/components/Body.css
@@ -1,5 +1,4 @@
 .body {
-  padding: 30px;
   flex: 0.8;
   color: white;
   background-image: -webkit-gradient(
@@ -9,5 +8,57 @@
     from(rgba(0, 0, 0, 0.6)),
     to(#121212)
   );
+
   background-color: rgb(72, 72, 72);
+}
+.body__container {
+  padding-left: 30px;
+  height: 340px;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(transparent),
+    to(rgba(0, 0, 0, 0.5))
+  );
+  background-color: rgb(24, 64, 120);
+
+
+}
+
+.body__info {
+  width: 70%;
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
+
+}
+.body__info > img {
+  width: 232px;
+  height: 232px;
+  box-shadow: 0 4px 60px rgb(0 0 0 / 50%);
+}
+.body__description {
+  padding-left: 20px;
+}
+.body__description > h1 {
+  font-size: 100px;
+  margin-bottom: 40px;
+}
+.body__songs {
+  padding-left: 30px;
+  background-image: linear-gradient(to top, rgba(24, 64, 120,0.1), rgba(24,64,120,0.3));
+}
+.body__icons {
+  padding-top: 10px;
+  display:flex;
+  align-items: center;
+  width: 150px;
+  justify-content: space-between;
+}
+.body__icons .body__shuffle {
+  width: 56px;
+  height: 56px;
+  color: green;
+  margin-right: 10px;
 }
